--- a/css/jraft-landing.webflow.css
+++ b/css/jraft-landing.webflow.css
@@ -894,7 +894,7 @@ body {
   align-items: stretch;
 }
 
-.div-block-6 {
+.form-name-parent {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -906,17 +906,20 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-width: 23rem;
+  max-width: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   color: #fff;
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 16px;
+  line-height: 140%;
   font-weight: 100;
   text-align: left;
 }
 
 .success-message {
+  padding: 0px;
   background-color: transparent;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
 }
 
 .text-block-3 {
@@ -5741,6 +5744,14 @@ body {
   width: 70%;
 }
 
+.footer-form {
+  grid-auto-columns: 1fr;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: auto auto;
+  grid-template-rows: auto auto;
+}
+
 @media screen and (max-width: 991px) {
   .footer {
     padding-right: 20px;
@@ -6278,7 +6289,7 @@ body {
   .feature-bounding-box.other-features-1 {
     width: 100%;
     height: auto;
-    padding: 3rem 3.2rem;
+    padding: 3rem 0rem;
   }
   .feature-bounding-box.editor-sumamry {
     width: 100%;
@@ -6335,6 +6346,7 @@ body {
     margin-top: 1rem;
   }
   .builder-mobile-stat-parent {
+    width: 100%;
     height: 25rem;
     margin-bottom: 1rem;
   }
@@ -6371,6 +6383,9 @@ body {
   }
   .div-block-1380 {
     width: 20rem;
+  }
+  .div-block-1381 {
+    max-width: none;
   }
   .heading-6 {
     font-size: 55px;
@@ -7237,7 +7252,7 @@ body {
   .feature-bounding-box.other-features-1 {
     margin-top: 4rem;
     margin-bottom: 4rem;
-    padding: 0rem 2.3rem;
+    padding: 0rem;
   }
   .feature-bounding-box.editor-sumamry {
     height: auto;
@@ -8473,7 +8488,7 @@ body {
     padding-top: 0rem;
   }
   .feature-bounding-box.other-features-1 {
-    padding: 0rem 2rem;
+    padding: 0rem;
   }
   .feature-bounding-box.editor-sumamry {
     padding-right: 0vw;
@@ -8632,6 +8647,9 @@ body {
     margin-bottom: 2rem;
     font-size: 33px;
   }
+  .builder-fixed-scroll-track {
+    margin-right: 0rem;
+  }
   .heading-7 {
     margin-top: 1.5rem;
     font-size: 20px;
@@ -8697,8 +8715,7 @@ body {
     margin-left: 0rem;
   }
   .other-features {
-    padding-right: 2rem;
-    padding-left: 2rem;
+    padding: 0rem 2rem 4rem;
   }
   .other-features-parent {
     width: 100%;
