--- a/css/storipress-landing.webflow.css
+++ b/css/storipress-landing.webflow.css
@@ -5026,11 +5026,20 @@ body {
   background-color: #191919;
   background-image: -webkit-gradient(linear, left top, right top, from(#ffd3e2), to(#d1c08e));
   background-image: linear-gradient(90deg, #ffd3e2, #d1c08e);
+  -webkit-transition: -webkit-filter 200ms ease-in-out;
+  transition: -webkit-filter 200ms ease-in-out;
+  transition: filter 200ms ease-in-out;
+  transition: filter 200ms ease-in-out, -webkit-filter 200ms ease-in-out;
   font-family: 'Archia webfont', Arial, sans-serif;
   color: #000;
   font-size: 16px;
   line-height: 150%;
   font-weight: 400;
+}
+
+.button-2:hover {
+  -webkit-filter: saturate(175%);
+  filter: saturate(175%);
 }
 
 .button-2.manager {
@@ -5745,11 +5754,19 @@ body {
   font-size: 15px;
 }
 
-.text-span-10 {
+.pricing-bold {
   font-weight: 500;
 }
 
 .text-span-11 {
+  font-weight: 500;
+}
+
+.bold-text-6 {
+  font-weight: 500;
+}
+
+.bold-text-7 {
   font-weight: 500;
 }
 
